@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="**/package.html|images/|webdocs/|wikipages/" kind="src" output="build" path="src"/>
-	<classpathentry excluding="etc/|build/|reports/|lib/" kind="src" output="tests/build" path="tests"/>
+	<classpathentry excluding="build/|etc/|lib/|libs-opt/|reports/" kind="src" output="tests/build" path="tests"/>
 	<classpathentry kind="lib" path="lib/commons-lang-2.6.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-api-1.0.4.jar"/>
 	<classpathentry kind="lib" path="lib/ecs-1.4.2.jar"/>
@@ -27,8 +27,8 @@
 	<classpathentry kind="lib" path="etc/i18n"/>
 	<classpathentry kind="lib" path="lib/freshcookies-security-0.60.jar"/>
 	<classpathentry kind="lib" path="lib/commons-httpclient-3.0.1.jar"/>
-	<classpathentry kind="lib" path="lib/jakarta-taglibs-jstl-1.1.2.jar"/>
-	<classpathentry kind="lib" path="lib/jakarta-tablibs-standard-1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/jstl-1.1.2.jar"/>
+	<classpathentry kind="lib" path="lib/standard-1.1.2.jar"/>
 	<classpathentry kind="lib" path="lib/commons-fileupload-1.2.1.jar"/>
 	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="tests/lib/commons-el-1.0.jar"/>
