@@ -1,3 +1,9 @@
+2012-08-29  Juan Pablo Santos (juanpablo AT apache DOT org)
+       
+       * no version bump
+       
+       * JSPWIKI-745: Dependencies currently downloadable from Central repo
+       
 2012-08-09  Juan Pablo Santos (juanpablo AT apache DOT org)
        
        * 2.9.0-incubating-10
